fix: Dark Mode Omission

--- a/source/css/main.css
+++ b/source/css/main.css
@@ -1005,6 +1005,7 @@ ol li {
     #menu #desktop-menu .title,
     #menu #desktop-menu a,
     #menu #mobile-menu .items,
+    #menu #mobile-menu .items a,
     #menu #mobile-menu .title,
     #footer #footer-wrap,
     #home-card #card-div .friend-links a,
